# minesweeper

./: .gitignore  Cargo.toml  Trunk.toml  debug.nu  index.html  readme.md
.helix/: languages.toml
board_plugin/: Cargo.toml
board_plugin/src/: components.rs  lib.rs  resources.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  uncover.rs
board_plugin/src/resources/: board_assets.rs  board_options.rs  tile.rs  tile_map.rs
src/: main.rs
