[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = [ "board_plugin/debug", "bevy-inspector-egui" ]

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = { version = "0.18", optional = true }

[workspace]
members = [ "board_plugin" ]